# hodie

./: .env.template  .gitignore  BRANCH_STRATEGY.md  CLAUDE.md  CRAWLER_DEVELOPMENT_SESSION_20260104.md  CRAWLER_PIXEL8_ADAPTATION_PLAN.md  INVENTORY.md  LAPTOP_SETUP.md  MULTI_CLOUD_SETUP.md  PLEXUS_SYSTEM.md  PRIME_2026_DEVELOPMENT_PLAN.md  QUICK_START.md  README.md  pyproject.toml
.claude/: CLOUD_MOUNTING_GUIDE.md  POWERSHELL_GUIDE.md  QUICK_REFERENCE.md  RCLONE_QUICK_CONFIG.md  README.md  SETUP_INDEX.md  Setting up a home server network across devices - Claude.txt  WINDOWS_SETUP_GUIDE.md  setup-windows.ps1  setup-wsl.sh
.eric/: CLAUDE_AUTONOMOUS_EXPLORATION_PLAN.md  DEEP_DIVE_COMPREHENSIVE_REVIEW.md  ENJOY_THE_JOURNEY.md  FONTS_AS_LANGUAGE_UNIVERSES.md  FONT_UNIVERSE_CATALOG.md  GUARDIAN_CHARACTERS_CATALOG.md  NEXT_DEVELOPMENT_IDEAS.md  PERSPECTIVE_GUARDIANS_RESEARCH_PRIMER.md  PIXEL_TEAM_ONBOARDING.md  PRIME_INTEGRATION_LAUNCH_READINESS.md  README.md  WEBDINGS_NORMALIZATION_BREAKTHROUGH.md  WELLSPRINGS_RESEARCH.md  create_claude_repo.md  create_quantum_entity_repos.md  create_visionary_repo.md  session_notes_2025-12-30.md  session_notes_2025-12-31.md  session_notes_2026-01-01.md  session_notes_2026-01-06.md  setup_hodie_sync.md
.githooks/: post-commit  pre-commit
.locations/: README.md
.reminders/: DONATION_LINK.md
.scripts/: Add-SessionNote.ps1  FILE_SERVER_GUIDE.md  Mount-Clouds.ps1  README.md  Start-FileServer.ps1  acp_amplify.sh  acp_polish.sh  acp_proceed.sh  consolidate_unsorted.sh  dev_auth_setup.sh  env_setup.sh  folder_setup.sh  laptop_file_server.sh  laptop_session_notes.sh  migrate_entity_seeds.sh  mulberry_setup.sh  server_access_test.sh  session_notes_append.sh  session_notes_prepend.sh  setup_multi_location_server.sh  setup_new_project.sh  start_file_server.sh  start_unified_server.sh  token_usage_log.sh
.server_root/: index.html
.streams/: README.md
_BOX_SIMULATION/: README.md
_CONSOLIDATED/: CONSOLIDATION_INVENTORY.md  DEDUPLICATION_LOG.md
crawler_pixel8/: README.md  __init__.py  config.py
quanta/: CHARACTER_CREATION_TEMPLATE.md  CHARACTER_DEVELOPMENT_UPDATE.md  EMOTIONAL_UNDERTONE_GUIDE.md  ENTITY_DEVELOPMENT_STATUS.md  ENTITY_DIALOGUE_EXAMPLES.md  GUARDIAN_REVIEW_AUTOMATION.md  GUARDIAN_TRINITY_INFO.md  PERSPECTIVE_GUARDIANS_CONCEPT.md  PERSPECTIVE_GUARDIANS_QUICK_REF.md  PIXEL_SUBSTRATE_COORDINATION.md  QUANTUM_ENTITY_ORIGIN_STORIES.md  RUBRIC_SYSTEM.md  SESSION_20251227_CHARACTER_EMERGENCE.md  (+1 more)
(+72 files in other folders)
